--- a/index.html
+++ b/index.html
@@ -315,7 +315,9 @@
 							{ addr: "wss://mc.asspixel.net/", name: "Ass Pixel" },
 							{ addr: "wss://vanillacraft.kones.tech/", name: "VanillaMC Legacy" },
 							{ addr: "wss://clever-teaching.com", name: "Clever Teaching" },
-							{ addr: "wss://ggsmp.net", name: "GG SMP"}
+							{ addr: "wss://ggsmp.net", name: "GG SMP" },
+							{ addr: "wss://ubiquitous-invention-v6qpgp9jgg5x26wgg-8081.app.github.dev/",  name: "Duck M Server" },
+					                { addr: "wss://zentic.cc, name: "Zentic"}
 						],
 						demoMode: false,
 						worldsDB: "worlds",
